# First_rust

./: .gitignore  Cargo.toml  README.md
examples/: teste_carga.rs  teste_carga_auth.rs
src/: auth.rs  db.rs  handlers.rs  main.rs  middleware.rs  models.rs
static/: home.html
