[package]
name = "hello_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
bcrypt = "0.17.1"
chrono = { version = "0.4.42", features = ["serde"] }
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", default-features = false, features = [
  "runtime-tokio-native-tls",
  "postgres",
  "derive",
  "chrono"
] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }

# 👇 adiciona estes
socket2 = "0.5"
num_cpus = "1"
futures = "0.3.31"
